@@ -135,15 +135,20 @@ BlueXP提供兩種升級Cloud Volumes ONTAP 途徑：
 +
 例如、如果您執行的是9.8版、而且想要升級至9.10.1版、則必須先升級至9.9.1版、然後再升級至9.10.1版。
 
-* 對於修補程式（ P ）版本、您可以從一個版本版本升級至下一個版本的任何 P 版本。
-+
+
+
+
+
+=== 修補程式版本
+
+自 2024 年 1 月起、只有在 BlueXP 中、如果是三個最新版 Cloud Volumes ONTAP 的修補程式版本、才能進行修補程式升級。我們使用最新的 GA 版本來判斷在 BlueXP 中顯示的三個最新版本。例如、如果目前的 GA 版本為 9.13.1 、則 BlueXP 中會出現 9.11.1.9.13.1 的修補程式。如果您想要升級至 9.11.1 版或更低版本的修補程式版本、您需要使用手動升級程序 <<從URL提供的映像升級,下載 ONTAP 映像>>。
+
+根據補充程式（ P ）版本的一般規則、您可以從一個版本版本升級至目前執行版本或下一個版本的任何 P 版本。
+
 以下是幾個範例：
 
-+
-** 9.13.0 > 9.13.1P15
-** 9.12.1 > 9.13.1P2
-
-
+* 9.13.0 > 9.13.1P15
+* 9.12.1 > 9.13.1P2
 
 
 
